# Ai_Multi_Agent

./: ._issues  .gitignore  README.md  test_test.py
voicehive-backend/: .env.example  .gitignore  .pre-commit-config.yaml  ARCHITECTURAL_RECOMMENDATIONS.md  CORRECTED_MIGRATION_SUMMARY.md  Dockerfile  ECOSYSTEM_INTEGRATION_PLAN.md  MIGRATION_STATUS.md  Makefile  README.md  REORGANIZATION_SUMMARY.md  agent_roxy.py  env.template  main.py  pyproject.toml  requirements.txt  run_sprint2_tests.py  test_phase2_simple.py  test_phase2_standalone.py  test_phase3_standalone.py  test_sprint6_basic.py  test_sprint6_standalone.py
voicehive-backend/app/: main.py
voicehive-backend/app/config/: settings.py
voicehive-backend/app/models/: vapi.py
voicehive-backend/app/routers/: vapi.py
voicehive-backend/app/services/: openai_service.py
voicehive-backend/app/services/agents/: roxy_agent.py
voicehive-backend/app/services/integrations/: notification_service.py
voicehive-backend/app/utils/: cache.py
voicehive-backend/dashboard/: .env.example  next.config.js  package-lock.json  package.json  tailwind.config.js
voicehive-backend/dashboard/.next/: app-build-manifest.json  trace
voicehive-backend/dashboard/.next/cache/: .tsbuildinfo
voicehive-backend/dashboard/.next/server/: app-paths-manifest.json  next-font-manifest.js  next-font-manifest.json  server-reference-manifest.json  webpack-runtime.js
voicehive-backend/dashboard/api/: dashboard.py
voicehive-backend/dashboard/public/: manifest.json  robots.txt
voicehive-backend/dashboard/src/app/: globals.css  layout.tsx  page.tsx
voicehive-backend/dashboard/src/components/: DashboardCard.tsx  DashboardChart.tsx  Navbar.tsx
voicehive-backend/data/prompts/: ._prompt_updates.json
voicehive-backend/data/prompts/versions/: v1.0.json
voicehive-backend/docs/: ENTERPRISE_ENHANCEMENT_SUMMARY.md  Phase_3_Advanced_Orchestration_Summary.md  REORGANIZATION_SUMMARY.md  SPRINT_4_DASHBOARD_MONITORING_README.md  SPRINT_6_IMPLEMENTATION_SUMMARY.md  VERTEX_AI_README.md  function_calling_protocol.md  memory_system_api.md  vertex_ai_architecture.md
voicehive-backend/docs/architecture/: module-relationships.md
voicehive-backend/improvements/: prompt_manager.py  prompt_updates.json
voicehive-backend/memory/: __init__.py  mem0.py
voicehive-backend/monitoring/: __init__.py  instrumentation.py
voicehive-backend/monitoring/alerts/: alertmanager.yml  prometheus-rules.yml
voicehive-backend/monitoring/dashboards/: voicehive-dashboard.json
voicehive-backend/src/voicehive/: main.py
voicehive-backend/tests/: conftest.py  test_edge_cases_and_performance.py  test_integration.py  test_main.py  test_phase2_ml_integration.py  test_services.py  test_sprint2_workflows.py  test_sprint3_feedback_loop.py  test_sprint4_dashboard_monitoring.py  test_sprint6_supervisor_implementation.py
voicehive-backend/tests/integration/: test_vapi_integration.py
voicehive-backend/tests/unit/: test_services.py
voicehive-backend/tools/: __init__.py  calendar.py  crm.py  notify.py
voicehive-backend/vertex/: daily_feedback_pipeline.py  monitoring_service.py  vertex_feedback_service.py
(+211 files in other folders)
